Add header and div class/images for buttons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Jan Ken Pon!</title>
+        <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
         <script src="script.js"></script>
     </head>
+
+    <body>
+        <h1>Rock Paper Scissors</h1>
+        <div class="buttons">
+            <button class="rock" type="button"><img src="rock.png" width="200"></button>
+            <button class="paper" type="button"><img src="paper.png" width="200"></button>
+            <button class="scissors" type="button"><img src="scissors.png" width="200"></button>
+        </div>
+    </body>
 </html>
