Add code to display results of each round

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
             <button id="paper" class="choice" value="Paper" type="button"><img src="paper.png" width="200"></button>
             <button id="scissors" class="choice" value="Scissors" type="button"><img src="scissors.png" width="200"></button>
         </div>
-        <div class="score">
+        <div id="score">
             <p>You:</p>
             <p>CPU:</p>
+        </div>
+        <div id="result">
+            <h2></h2>
         </div>
     </body>
 </html>
