--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 
     <body>
         <h1>Rock Paper Scissors</h1>
-        <div class="buttons">
+        <div id="choices">
             <button id="rock" class="choice" value="Rock" type="button"><img src="rock.png" width="200"></button>
             <button id="paper" class="choice" value="Paper" type="button"><img src="paper.png" width="200"></button>
             <button id="scissors" class="choice" value="Scissors" type="button"><img src="scissors.png" width="200"></button>
         </div>
         <div id="score">
-            <p>You:</p>
-            <p>CPU:</p>
+            <p class="you">You: </p>
+            <p class="cpu">CPU: </p>
         </div>
         <div id="result">
             <h2></h2>
         </div>
+        <div id="final"></div>
     </body>
 </html>
