Make minor styling changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <h1>Rock Paper Scissors</h1>
         <div id="choices">
-            <button id="rock" class="choice" value="Rock" type="button"><img src="rock.png" width="200"></button>
-            <button id="paper" class="choice" value="Paper" type="button"><img src="paper.png" width="200"></button>
-            <button id="scissors" class="choice" value="Scissors" type="button"><img src="scissors.png" width="200"></button>
+            <button id="rock" class="choice" value="Rock" type="button"><img src="images/rock.png" width="200"></button>
+            <button id="paper" class="choice" value="Paper" type="button"><img src="images/paper.png" width="200"></button>
+            <button id="scissors" class="choice" value="Scissors" type="button"><img src="images/scissors.png" width="200"></button>
         </div>
         <div id="score">
             <p class="you">You: </p>
